# WebShop

./: .gitignore  bootstrap.sh  pyproject.toml  start_server.sh
search_engine/: convert_product_file_format.py
web_agent_site/: app.py  utils.py
web_agent_site/engine/: engine.py
